// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component <Table /> should render correctly 1`] = `
.c0 {
  display: table;
  width: 100%;
  height: 100%;
  max-width: 100%;
  border-collapse: collapse;
}

<div
  className="c0"
/>
`;

exports[`component <Table disabled={true} /> should render correctly  1`] = `
.c0 {
  display: table;
  width: 100%;
  height: 100%;
  max-width: 100%;
  border-collapse: collapse;
  pointer-events: none;
  opacity: 0.4;
}

<div
  className="c0"
  disabled={true}
/>
`;
